--- a/ev3dev-lang-cpp/demos/CMakeLists.txt
+++ b/ev3dev-lang-cpp/demos/CMakeLists.txt
@@ -5,5 +5,6 @@ add_ev3_executable(ev3dev-lang-test    ev3dev-lang-test.cpp)
 add_ev3_executable(remote-control      remote-control.cpp)
 add_ev3_executable(remote_control-test remote_control-test.cpp)
 add_ev3_executable(sound-test          sound-test.cpp)
-add_ev3_executable(babyDriv          drive.cpp)
-add_ev3_executable(Robutts          Robutts.cpp)
+add_ev3_executable(babyDriv            drive.cpp)
+add_ev3_executable(robutts             Robutts.cpp)
+add_ev3_executable(nycolor             nyColor.cpp)
