--- a/ev3dev-lang-cpp/demos/CMakeLists.txt
+++ b/ev3dev-lang-cpp/demos/CMakeLists.txt
@@ -7,4 +7,5 @@ add_ev3_executable(remote_control-test remote_control-test.cpp)
 add_ev3_executable(sound-test          sound-test.cpp)
 add_ev3_executable(babyDriv            drive.cpp)
 add_ev3_executable(robutts             Robutts.cpp)
+add_ev3_executable(robuttsT            RobuttsT.cpp)
 add_ev3_executable(nycolor             nyColor.cpp)
