--- a/ev3dev-lang-cpp/demos/CMakeLists.txt
+++ b/ev3dev-lang-cpp/demos/CMakeLists.txt
@@ -9,3 +9,4 @@ add_ev3_executable(babyDriv            drive.cpp)
 add_ev3_executable(robutts             Robutts.cpp)
 add_ev3_executable(robuttsT            RobuttsT.cpp)
 add_ev3_executable(nycolor             nyColor.cpp)
+add_ev3_executable(colorRange          ColorRange.cpp)
